@@ -12,9 +12,13 @@ Version 1.1.1
 2025.01.25 (1.1.1)
   * Made non-embedded screen size 640x480.
 
-  * "Start" appears as "Start Over" if a game is active.
+  * Title screen improvements:
 
-  * Highlight "Start [Over]" and "Continue" when pointer hovers over them.
+    + "Start" appears as "Start Over" if a game is active.
+
+    + Highlight "Start [Over]" and "Continue" when pointer hovers over them.
+
+    + [Up]/[Down] keys can be used to select items, too.
 
 
 2002.04.20 (1.1.0)
